--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,24 @@
                 <p class="event received">Robe is Ready</p>
             </div>
         </div>
+		
+		<div data-role="page" id="homePage">
+			<div data-theme="" data-role="header">
+				<h3>Schede immobiliari</h3>
+			</div>
+ 
+			<div data-role="content">
+				<a data-role="button" href="#scheda" data-icon="plus" data-iconpos="left">Sos</a>
+				<a data-role="button" href="#elencoSchede" data-icon="bars" data-iconpos="left">Sas</a>
+				<a id="btnInviaSchede" data-role="button" href="#page1" data-icon="forward" data-iconpos="left">Sus</a>
+			</div>
+ 
+			<div data-theme="a" data-role="footer" data-position="fixed">
+				<h3>Schede immobiliari</h3>
+			</div>
+		</div>
+		
+		
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
