--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
         <div class="app">
             <div data-role="page" id="homePage">
 				<div data-theme="" data-role="header">
-					<h3>Schede</h3>
+					<h1>Di cosa!??</h1>
 				</div>
 	 
 				<div data-role="content">
@@ -42,9 +42,6 @@
 					<a id="btnInviaSchede" data-role="button" href="" data-iconpos="left">Sus</a>
 				</div>
 	 
-				<div data-theme="a" data-role="footer" data-position="fixed">
-					<h3>Schede</h3>
-				</div>
 			</div>
         </div>
 		
